--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-product-manager-ssed-10062'>Senior Product Manager : SSED - Rakuten Careers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/warbyparker/jobs/1940731'>Job Application for Product Manager, Ecommerce Platform at Warby Parker</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-product-manager-ssed-10062'>Senior Product Manager : SSED - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/snowplowanalytics/ad579081-b279-410a-b41c-02b7231a41a6'>Snowplow Analytics - Product Manager</a></h5> 
@@ -150,11 +158,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/recurly/0df41d98-6ed5-4e07-92f5-e6c5eb47d7da'>Recurly - Technical Data Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/0df41d98-6ed5-4e07-92f5-e6c5eb47d7da'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585283'>Stellenangebot: Product Owner (m/w/d) (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585283'>Stellenangebot: Product Owner (m/w/d) (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -186,7 +194,7 @@
 <p><span class="badge badge-light">Seattle, WA  San Francisco Palo Alto Seattle New York City</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -206,11 +214,11 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/sequoia/6f2fffe3-c2e7-4082-8a33-d0d886353200'>Sequoia Consulting Group - Salesforce Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sequoia/6f2fffe3-c2e7-4082-8a33-d0d886353200'>Sequoia Consulting Group - Salesforce Product Owner</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/miteksystems-2/cc5b14b0-a04c-441e-8dba-3980b560c364'>Mitek Systems - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/miteksystems-2/cc5b14b0-a04c-441e-8dba-3980b560c364'>Mitek Systems - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -266,7 +274,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -439,14 +447,6 @@
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940150'>Job Application for Sr. Product Manager  at ZipRecruiter</a></h5> 
-<p><span class="badge badge-light">Palo Alto, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940172'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
-<p><span class="badge badge-light">Santa Monica, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940182'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
